🎆 start the pointers module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["helpme", "Keiko", "Pixl", "zerotomastery"]
+  "cSpell.words": [
+    "aiur",
+    "darkstar",
+    "helpme",
+    "Keiko",
+    "Pixl",
+    "zerotomastery"
+  ]
 }
